Выполнение 8 домашнего задания